Alignment fixes

--- a/css/_default.scss
+++ b/css/_default.scss
@@ -65,7 +65,7 @@ body {
 }
 
 #content {
-  padding: 80px 0 0 70px;
+  padding: 74px 0 0 70px;
   margin: 0;
   max-width: 600px;
 
