--- a/css/_post.scss
+++ b/css/_post.scss
@@ -1,3 +1,12 @@
 #disqus_thread {
     margin: 30px 0 0 0;
 }
+
+#content {
+    h2 {
+        margin: 0;
+        padding: 0;
+        font-weight: 600;
+        font-size: 22px;
+    }
+}
